Fix corner margin/alignment issues.

--- a/fatcatmap/assets/sass/layout/_footer.sass
+++ b/fatcatmap/assets/sass/layout/_footer.sass
@@ -33,8 +33,8 @@
   ul
     margin: 0
     padding: 0
-    height: 15px
     -webkit-padding-start: 0
+    text-align: right
     list-style-type: none
 
     li
