--- a/fatcatmap/assets/sass/layout/_header.sass
+++ b/fatcatmap/assets/sass/layout/_header.sass
@@ -40,7 +40,7 @@
       color: $grey-darker
 
 #graph_search
-  margin: 1em 1em 0 0
+  margin: 0.5em 0.5em 0 0
 
   input
     width: 15em
